--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -6,7 +6,8 @@
 
 .header h1 {
     font-family: 'VT323', monospace;
-    font-size: 60px;
+    font-weight: lighter;
+    font-size: 80px;
 }
 
 .navBar {
@@ -21,7 +22,7 @@
     user-select: none;
 }
 
-.navBar h3:hover {
+.navBar h3:hover, .navBar .current {
     background-color: #fdc8e2;
     color: #7d3345;
     border-radius: 5px;
@@ -32,4 +33,25 @@
 .navBar h3:active {
     background-color: #fdc8e265;
     color: #fdc8e2;
+}
+
+@media screen and (max-width: 1000px) {
+    .header {
+        flex-direction: column;
+        margin: 5vw;
+    }
+    .header h1 {
+        font-size: 10vw;
+    }
+    .header h2 {
+        font-size: 5vw;
+    }
+    .header h3 {
+        font-size: 3vw;
+        padding: 3px;
+    }
+    .navBar {
+        width: 100%;
+        margin-top: 10px;
+    }
 }
