--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -1,3 +1,8 @@
+.portfolio h1{
+    margin-bottom: 15px;
+    font-size: 50px;
+}
+
 .allProjects .projectImg {
     width: 50%;
     border: 5px solid #6022386a;
@@ -7,13 +12,14 @@
 .allProjects .logo {
     height: 50px;
     width: 50px;
+    padding: 5px;
 }
 
 .projectContainerLeft, .projectContainerRight {
     padding: 10px;
     width: 100%;
     display: flex;
-    margin-top: 10px;
+    margin: 30px 0px;
 }
 
 .projectContainerRight {
