--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,9 @@ main {
     margin: 0px 50px;
     border-radius: 15px;
     box-shadow: 10px 15px 25px 15px #1c1c1cb0;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
+    -ms-overflow-style: none;
     padding: 50px;
 }
 
@@ -33,7 +35,7 @@ main {
   /* Track */
   ::-webkit-scrollbar-track {
     background: #fdc8e2;
-    border-radius: 15px;
+    border-radius: 0px 5px 5px 0px;
   }
   
   /* Handle */
