--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     padding: 15px 50px 25px 50px;
-    height: 20vh;
+    height: 15%;
 }
 
 .header h1 {
