--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -5,7 +5,7 @@
 
 .allProjects .projectImg {
     width: 50%;
-    border: 5px solid #6022386a;
+    border: 3px dotted #602238;
     border-radius: 5px;
 }
 
