--- a/src/pages/AboutMe/style.css
+++ b/src/pages/AboutMe/style.css
@@ -1,11 +1,24 @@
 .aboutMe {
     display: flex;
     justify-content: space-between;
+    height: 100%;
 }
 
 .aboutMe .innerDiv {
     display: flex;
     width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.aboutMe .innerDiv > div{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 50px;
 }
 
 .aboutMe h1 {
@@ -24,17 +37,10 @@
     margin: 10px 30px;
 }
 
-.aboutMe .leftSide {
-    width: 50%;
-}
-
-.aboutMe img {
-    height: 30vw;
-}
-
-.aboutMe .rightSide {
-    width: 50%;
-    text-align: center;
+#profilePic {
+    height: 300px;
+    align-self: center;
+    border: 3px dotted #602238;
 }
 
 .aboutMe button {
@@ -46,6 +52,7 @@
     cursor: pointer;
     font-family: monospace;
     margin: 10px;
+    width: 100px;
 }
 
 .aboutMe button:hover {
